# py3-notifier

./: MANIFEST  README.md  pyproject.toml  setup.py
py3notifier/: notifications.py
